--- a/css/style.css
+++ b/css/style.css
@@ -101,15 +101,162 @@
 /* END HEADER*/
 
 /* CONTENT*/
+/* First section*/
+.content_wrap{
+    margin: 0 auto;
+    max-width: 1000px;
+}
+.cont_item_up{
+    width: 320px;
+    height: 200px;
+    display: inline-block;
+    margin-top: 30px;
+}
+.content_wrap .cont_item_up:nth-child(1){
+    background-image: url(../img/box1.jpg);
+}
+.content_wrap .cont_item_up:nth-child(2){
+    background-image: url(../img/box2.jpg);
+    margin-left:15px;
+}
+.content_wrap .cont_item_up:nth-child(3){
+    background-image: url(../img/box3.jpg);
+    margin-left:15px;
+}
+.cont_item_text{
+    color: #ffffff;
+    font-size:43px;
+    line-height: 250px;
+    text-shadow: 3px 2px 5px #676767;
+    margin-left: 20px;
+}
+.text_1{
+     margin-left: 120px;
+}
+.text_3{
+    margin-left: 120px;
+}
+.cont_item_text_sm{
+    color: #ffffff;
+    font-size:16px;
+}
+.cont_item_panel{
+    width: 260px;
+    height: 45px;
+    opacity: .9;
+    padding: 10px;
+    right: 0;
+    bottom: 0;
+}
+.cont_item_panel:hover{
+    opacity: 1;
+}
+.cont_item_button{
+    position: absolute;
+    right: 9px;
+    top: 7px;
+    background-image: url("../img/sprite.png");
+    background-repeat: no-repeat;
+    background-position: -192px 0;
+    width: 32px;
+    height: 32px;
+}
+.panel_1{
+    background-color: #4999af;
+}
+.panel_2{
+    background-color: #668333;
+}
+.panel_3{
+    background-color: #f1715e;
+}
 
+/* Second section*/
+
+.cont_item_bt{
+    width: 498px;
+    display: inline-block;
+    margin-top: 30px;
+    margin-bottom:50px;
+    vertical-align: top;
+}
+
+.cont_bt_title{
+    color: #60a4b7;
+    font-size:30px;
+}
+
+.mounth_day{
+    color: #829858;
+    font-size:35px;
+    line-height: 30px;
+
+}
+.mounth{
+    color: #829858;
+    font-size:15px;
+}
+.event{
+    color: #f1715e;
+    font-size:20px;
+}
+.week_day{
+    color: #5f5f5f;
+    font-size: 16px;
+    font-weight: bold;
+}
+.time{
+    color: #908f8d;
+    font-size: 16px;
+}
+.more{
+    position: absolute;
+    right: 20px;
+    top: 30px;
+    width: 90px;
+    height: 34px;
+    background-color:#4999af;
+    border-radius: 7px;
+    color: #ffffff;
+    border:none;
+}
+.events_cal{
+    margin-top:25px;
+}
+.events_cal li{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-top: 1px solid #d2cdc9;
+    width: 460px;
+}
+.events_cal li div{
+    display: inline-block;
+}
+.events_cal li div:nth-child(1){
+    width: 40px;
+}
+.events_cal li div:nth-child(2){
+    margin-left:20px;
+}
+.cont_bt_right{
+    color: #5f5f5f;
+    font-size:16px;
+ }
+.bt_right_1{
+    margin-top: 20px;
+}
+.bt_right_2{
+    margin-bottom: 20px;
+}
+.readmore{
+    color: #f1715e!important;
+    font-size:16px;
+    font-weight: bold;
+    text-decoration: none;
+}
 /* END CONTENT*/
 
 /* FOOTER*/
-.wrapper{
-    margin: 0 auto;
-    max-width: 1400px;
-    padding: 0 1em;
-}
 .footer{
     background-color: #525252;
     height:245px;
